@@ -16,3 +16,6 @@ line 11 to 39 .header changed to header
 line 27 to 35 changed div to nav
 line 191 to 198 .footer changed to footer
 line 198 h2 changed to h4
+line 164 to 186 changed classes to tag selectors and deleted redundant styles
+line 137 to 155 changed classes to tag selectors and deleted redundant styles
+line 89 to 131 changed classes to aside div tag selectors and deleted redundant styles
